--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
+<meta name="robots" content="noindex, nofollow">
 
     <!-- Adform tracking code begin -->
     <script type="text/javascript">
