--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 <meta name="robots" content="noindex, nofollow">
 
-    <!-- Adform tracking code begin -->
+    <!-- Adform tracking code begin
     <script type="text/javascript">
       window._adftrack = Array.isArray(window._adftrack)
         ? window._adftrack
@@ -51,7 +51,7 @@
         var x = document.getElementsByTagName("script")[0];
         x.parentNode.insertBefore(s, x);
       })();
-    </script>
+    </script> -->
 
     <script>
       // Define gtag function and dataLayer array
