--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </script>
 
     <!-- Google Tag Manager -->
-    <script>
+    <!-- <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({
@@ -165,7 +165,7 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PZDCDL4S");
-    </script>
+    </script> -->
   </head>
   <body class="bg-[#323f48] text-white">
     <div id="root"></div>
